// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-columns-container columnsCount 2 renders column children 1`] = `
<DocumentFragment>
  <div>
    <span>
      <!--[if mso]&gt;&lt;table role="presentation" align="center" width="100%" cellspacing="0" cellpadding="0" border="0"&gt;&lt;tr&gt;&lt;td valign="top"&gt;&lt;![endif]-->
    </span>
    <table
      align="center"
      border="0"
      cellpadding="0"
      role="presentation"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="50%"
          >
            bread
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="50%"
          >
            tomato
          </td>
        </tr>
      </tbody>
    </table>
    <span>
      <!--[if mso]&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;![endif]-->
    </span>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 2 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <span>
      <!--[if mso]&gt;&lt;table role="presentation" align="center" width="100%" cellspacing="0" cellpadding="0" border="0"&gt;&lt;tr&gt;&lt;td valign="top"&gt;&lt;![endif]-->
    </span>
    <table
      align="center"
      border="0"
      cellpadding="0"
      role="presentation"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 6px;"
            width="50%"
          >
            bread
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 6px; padding-right: 0px;"
            width="50%"
          >
            tomato
          </td>
        </tr>
      </tbody>
    </table>
    <span>
      <!--[if mso]&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;![endif]-->
    </span>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 renders column children 1`] = `
<DocumentFragment>
  <div>
    <span>
      <!--[if mso]&gt;&lt;table role="presentation" align="center" width="100%" cellspacing="0" cellpadding="0" border="0"&gt;&lt;tr&gt;&lt;td valign="top"&gt;&lt;![endif]-->
    </span>
    <table
      align="center"
      border="0"
      cellpadding="0"
      role="presentation"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="33.33%"
          >
            bread
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="33.33%"
          >
            tomato
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="33.33%"
          >
            lettuce
          </td>
        </tr>
      </tbody>
    </table>
    <span>
      <!--[if mso]&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;![endif]-->
    </span>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 uses padding correctly 1`] = `
<DocumentFragment>
  <div>
    <span>
      <!--[if mso]&gt;&lt;table role="presentation" align="center" width="100%" cellspacing="0" cellpadding="0" border="0"&gt;&lt;tr&gt;&lt;td valign="top"&gt;&lt;![endif]-->
    </span>
    <table
      align="center"
      border="0"
      cellpadding="0"
      role="presentation"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 8px;"
            width="33.33%"
          >
            bread
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 4px; padding-right: 4px;"
            width="33.33%"
          >
            tomato
          </td>
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 8px; padding-right: 0px;"
            width="33.33%"
          >
            lettuce
          </td>
        </tr>
      </tbody>
    </table>
    <span>
      <!--[if mso]&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;![endif]-->
    </span>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with default values 1`] = `
<DocumentFragment>
  <div>
    <span>
      <!--[if mso]&gt;&lt;table role="presentation" align="center" width="100%" cellspacing="0" cellpadding="0" border="0"&gt;&lt;tr&gt;&lt;td valign="top"&gt;&lt;![endif]-->
    </span>
    <table
      align="center"
      border="0"
      cellpadding="0"
      role="presentation"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="50%"
          />
          <td
            class="ebw-col-stack"
            style="box-sizing: content-box; vertical-align: middle; padding-left: 0px; padding-right: 0px;"
            width="50%"
          />
        </tr>
      </tbody>
    </table>
    <span>
      <!--[if mso]&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;![endif]-->
    </span>
  </div>
</DocumentFragment>
`;
